--- a/mark/style.css
+++ b/mark/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: Mark Onepage Theme
-Theme URI: https://mkpobitro.com/mark
+Theme URI: https://pobitro.me/mark
 Author: Pobitro Mondal
-Author URI: https://mkpobitro.com
+Author URI: https://pobitro.com
 Description: The 2013 theme for WordPress takes us back to the blog, featuring a full range of post formats, each displayed beautifully in their own unique way. Design details abound, starting with a vibrant color scheme and matching header images, beautiful typography and icons, and a flexible layout that looks great on any device, big or small.
 Version: 1.0
 License: GNU General Public License v2 or later
